--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,8 +11,5 @@ tokio-tungstenite = "^0.17"
 tungstenite = "0.17"
 futures-channel = "^0.3"
 futures-util = "^0.3"
-#warp = "^0.3.2"
-#serde = {version = "1.0", features = ["derive"]}
-#serde_json = "1.0"
-#futures = { version = "0.3", default-features = false }
-#uuid = { version = "0.4", features = ["serde", "v4"] }
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
